--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 @import "tailwindcss-animated";
 @plugin "daisyui" {
-  themes: all;
+  themes: retro --default, dim --prefersdark;
 }
 
 @theme {
